# treefera-lcaw26-hackathon

./: .gitignore  BUILD_CONTRACT.md  CHEATSHEET.md  GLOSSARY.md  HANDOFF_CONTEXT.md  HANDOFF_FRONTEND_PIPELINE.md  HANDOFF_INFRA.md  HANDOFF_QGIS_MCP.md  HANDOFF_SAR_VIEWER.md  INFRA_CONTRACT.md  LINKS.md  README.md  USP_AND_BORNEO_PILOT_TARGETS.md  neat.patch  package-lock.json
hackathon-demo/: 01_sentinel2_optical.ipynb  02_lulc_and_hansen.ipynb  03_sentinel1_sar_despeckle.ipynb  04_aef_embeddings_and_ecostress.ipynb  README.md  pyproject.toml  requirements.txt
hackathon-demo/hackathon_demo_data/: README.md  esri_lulc_classes.json
hackathon-demo/hackathon_demo_data/boundary/: D_Chablis_Vineyard_aoi.geojson
hackathon-demo/hackathon_demo_data/ecostress/cube.zarr/: zarr.json
hackathon-demo/hackathon_demo_data/ecostress/cube.zarr/LST/: zarr.json
hackathon-demo/hackathon_demo_data/ecostress/cube.zarr/cloud/: zarr.json
hackathon-demo/hackathon_demo_data/ecostress/cube.zarr/time/: zarr.json
hackathon-demo/hackathon_demo_data/ecostress/cube.zarr/x/: zarr.json
hackathon-demo/hackathon_demo_data/ecostress/cube.zarr/y/: zarr.json
hackathon-demo/hackathon_demo_data/esri_lulc/2025/: lulc_D_Chablis_Vineyard_2025.tif
hackathon-demo/hackathon_demo_data/hansen_lossyear/: hansen_lossyear.tif
hackathon-demo/hackathon_demo_data/sentinel1_gee/2023/: sentinel1_D_Chablis_Vineyard_2023.tif
hackathon-demo/hackathon_demo_data/sentinel2/cube.zarr/: zarr.json
hackathon-demo/hackathon_demo_data/sentinel2/cube.zarr/B02/: zarr.json
(+725 files in other folders)
