[project]
name = "hackathon-example-scripts"
version = "0.1.0"
description = "Lightweight, visual notebooks for reading the June 2026 hackathon data from S3"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "xarray>=2024.10.0",
    "zarr>=3.0.0",
    "rioxarray>=0.15.0",
    "rasterio>=1.3.0",
    "s3fs>=2024.6.0",
    "boto3>=1.34.0",
    "dask>=2024.1.0",
    "matplotlib>=3.7.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.29.0",
]
